preparing for deployement

--- a/public/advanced.html
+++ b/public/advanced.html
@@ -421,7 +421,7 @@
                               >Précédent</a
                          >
                          <a
-                              href="index.html"
+                              href="../index.html"
                               class="bg-white border-2 border-solid border-purple-500 text-purple-500 py-1.5 px-4 rounded-lg font-semibold transition ease-in duration-75 hover:bg-purple-500 hover:text-white"
                               >Suivant</a
                          >
