--- a/public/minimal.html
+++ b/public/minimal.html
@@ -166,7 +166,7 @@
                     </div>
                     <div class="flex items-center justify-between">
                          <a
-                              href="index.html"
+                              href="../index.html"
                               class="bg-white border-2 border-solid border-purple-500 text-purple-500 py-1.5 px-4 rounded-lg font-semibold transition ease-in duration-75 hover:bg-purple-500 hover:text-white"
                               >Précédent</a
                          >
