--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
                name="viewport"
                content="width=device-width, initial-scale=1.0"
           />
-          <link href="/public/output-style.css" rel="stylesheet" />
-          <title>Document</title>
+          <link href="./public/output-style.css" rel="stylesheet" />
+          <title>Average Mark Calculator</title>
      </head>
      <body>
           <div
@@ -175,12 +175,12 @@
                     </div>
                     <div class="flex items-center justify-between">
                          <a
-                              href="advanced.html"
+                              href="./public/advanced.html"
                               class="bg-white border-2 border-solid border-purple-500 text-purple-500 py-1.5 px-4 rounded-lg font-semibold transition ease-in duration-75 hover:bg-purple-500 hover:text-white"
                               >Précédent</a
                          >
                          <a
-                              href="minimal.html"
+                              href="./public/minimal.html"
                               class="bg-white border-2 border-solid border-purple-500 text-purple-500 py-1.5 px-4 rounded-lg font-semibold transition ease-in duration-75 hover:bg-purple-500 hover:text-white"
                               >Suivant</a
                          >
@@ -188,6 +188,6 @@
                </div>
           </div>
 
-          <script src="../src/script.js"></script>
+          <script src="./src/script.js"></script>
      </body>
 </html>
